--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 language: cpp
 compiler: gcc
-addons:
-  apt:
-    packages:
-    - libboost-all-dev
-
+addons: apt: packages:libboost-all-dev
 script: ./build.sh
