--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: cpp
 compiler: gcc
-addons: apt: packages: libboost-all-dev
+addons: 
+  apt: 
+    packages: libboost-all-dev
 script: ./build.sh
